--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ Theme Name: Portfolio
 Author: Michael Trumbull
 Description: This is a theme for a personal portfolio website.
 */
+
+header {
+    padding: 20px 0 50px 0;
+}
+
+footer {
+    padding: 50px 0 20px 0;
+}
+
